--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
@@ -1,78 +1,113 @@
-{% block blur_elysium_slides_basic_form %}
-    <sw-container columns="1fr" gap="0 32px">
+<div>
+    {% block blur_elysium_slides_detail_view_card_content_form %}
+        <sw-card
+            :title="$tc('BlurElysiumSlides.baseForm.generalCardTitle')"
+            :is-loading="isLoading"
+        >
 
-        {% block blur_elysium_slides_input_name %}
-            <sw-field
-                type="text"
-                v-model="slide.name" 
-                :error="blurElysiumSlidesNameError"
-                :label="$tc('BlurElysiumSlides.baseForm.labelInput.title')"
-                :placeholder="placeholder(slide, 'name', this.$tc('BlurElysiumSlides.baseForm.labelInput.placeholder') )"
-                :helpText="$tc('BlurElysiumSlides.baseForm.labelInput.helpText')"
-                required
-            />
+        {% block blur_elysium_slides_basic_form %}
+            <sw-container columns="1fr" gap="0 32px">
+
+                {% block blur_elysium_slides_input_name %}
+                    <sw-field
+                        type="text"
+                        v-model="slide.name" 
+                        :error="blurElysiumSlidesNameError"
+                        :label="$tc('BlurElysiumSlides.baseForm.labelInput.title')"
+                        :placeholder="placeholder(slide, 'name', this.$tc('BlurElysiumSlides.baseForm.labelInput.placeholder') )"
+                        :helpText="$tc('BlurElysiumSlides.baseForm.labelInput.helpText')"
+                        required
+                    />
+                {% endblock %}
+
+                {% block blur_elysium_slides_input_title %}
+                    <sw-field
+                        type="text"
+                        v-model="slide.title" 
+                        :label="$tc('BlurElysiumSlides.baseForm.titleInput.title')"
+                        :placeholder="placeholder(slide, 'title', this.$tc('BlurElysiumSlides.baseForm.titleInput.placeholder') )"
+                        :helpText="$tc('BlurElysiumSlides.baseForm.titleInput.helpText')"
+                    />
+                {% endblock %}
+
+                {% block blur_elysium_slides_input_description %}
+                    <sw-field
+                        type="textarea"
+                        v-model="slide.description" 
+                        :label="$tc('BlurElysiumSlides.baseForm.descriptionInput.title')"
+                        :placeholder="placeholder(slide, 'description', this.$tc('BlurElysiumSlides.baseForm.descriptionInput.placeholder') )"
+                        :helpText="$tc('BlurElysiumSlides.baseForm.descriptionInput.helpText')"
+                    />
+                {% endblock %}
+            </sw-container> 
         {% endblock %}
+        </sw-card>
+    {% endblock %}
 
-        {% block blur_elysium_slides_input_title %}
-            <sw-field
-                type="text"
-                v-model="slide.title" 
-                :label="$tc('BlurElysiumSlides.baseForm.titleInput.title')"
-                :placeholder="placeholder(slide, 'title', this.$tc('BlurElysiumSlides.baseForm.titleInput.placeholder') )"
-                :helpText="$tc('BlurElysiumSlides.baseForm.titleInput.helpText')"
-            />
-        {% endblock %}
+    {% block blur_elysium_slides_detail_view_card_linking_form %}
+        <sw-card
+            :title="$tc('BlurElysiumSlides.baseForm.linkingCardTitle')"
+            :is-loading="isLoading"
+        >
 
-        {% block blur_elysium_slides_input_description %}
-            <sw-field
-                type="textarea"
-                v-model="slide.description" 
-                :label="$tc('BlurElysiumSlides.baseForm.descriptionInput.title')"
-                :placeholder="placeholder(slide, 'description', this.$tc('BlurElysiumSlides.baseForm.descriptionInput.placeholder') )"
-                :helpText="$tc('BlurElysiumSlides.baseForm.descriptionInput.helpText')"
-            />
-        {% endblock %}
+        {% block blur_elysium_slides_linking_form %}
+            <sw-container columns="1fr 1fr" gap="32px" align="center">
+                
+                {% block blur_elysium_slides_input_url %}
+                    <sw-field
+                        type="text"
+                        v-model="slide.url" 
+                        class="bc__my-0"
+                        :label="$tc('BlurElysiumSlides.baseForm.urlInput.title')"
+                        :placeholder="placeholder(slide, 'url', this.$tc('BlurElysiumSlides.baseForm.urlInput.placeholder') )"
+                        :helpText="$tc('BlurElysiumSlides.baseForm.urlInput.helpText')"
+                    />
+                {% endblock %}
 
-        <sw-container columns="1fr 1fr" gap="0 32px">
-            
-            {% block blur_elysium_slides_input_url %}
-                <sw-field
-                    type="text"
-                    v-model="slide.url" 
-                    :label="$tc('BlurElysiumSlides.baseForm.urlInput.title')"
-                    :placeholder="placeholder(slide, 'url', this.$tc('BlurElysiumSlides.baseForm.urlInput.placeholder') )"
-                    :helpText="$tc('BlurElysiumSlides.baseForm.urlInput.helpText')"
-                />
-            {% endblock %}
-
-                <sw-select-field 
-                    v-if="slide.slideSettings"
-                    v-model="slide.slideSettings.urlTarget"
-                    class="bc__my-0"
-                    :label="$tc('BlurElysiumSlides.settingsForm.urlSettings.target.label')"
-                    :placeholder="placeholder(slide, 'slideSettings.urlTarget', this.$tc('BlurElysiumSlides.settingsForm.urlSettings.target.placeholder') )"
-                    :value="slide.slideSettings.urlTarget">
-                    <option value="internal">{{ $tc('BlurElysiumSlides.settingsForm.urlSettings.target.options.internal') }}</option>
-                    <option value="external">{{ $tc('BlurElysiumSlides.settingsForm.urlSettings.target.options.external') }}</option>
-                </sw-select-field>
-
-            {% block blur_elysium_slides_input_button_label %}
-                <sw-field
-                    type="text"
-                    v-model="slide.button_label" 
-                    :label="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.title')"
-                    :placeholder="placeholder(slide, 'button_label', this.$tc('BlurElysiumSlides.baseForm.buttonLabelInput.placeholder') )"
-                    :helpText="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.helpText')"
-                />
-            {% endblock %}
-
-                    <sw-switch-field 
-                        :label="$tc('BlurElysiumSlides.settingsForm.urlSettings.overlay.inputLabel')" 
+                {% block blur_elysium_slides_input_url_target %}
+                    <sw-select-field 
                         v-if="slide.slideSettings"
-                        v-model="slide.slideSettings.urlOverlay"
-                        class="bc__my-0">
-                    </sw-switch-field>
-            
-        </sw-container>
-    </sw-container> 
-{% endblock %}
+                        v-model="slide.slideSettings.urlTarget"
+                        class="bc__my-0"
+                        :label="$tc('BlurElysiumSlides.settingsForm.urlSettings.target.label')"
+                        :placeholder="placeholder(slide, 'slideSettings.urlTarget', this.$tc('BlurElysiumSlides.settingsForm.urlSettings.target.placeholder') )"
+                        :value="slide.slideSettings.urlTarget">
+                        <option value="internal">{{ $tc('BlurElysiumSlides.settingsForm.urlSettings.target.options.internal') }}</option>
+                        <option value="external">{{ $tc('BlurElysiumSlides.settingsForm.urlSettings.target.options.external') }}</option>
+                    </sw-select-field>
+                {% endblock %}
+
+                {% block blur_elysium_slides_input_button_label %}
+                    <sw-field
+                        type="text"
+                        v-model="slide.button_label" 
+                        :label="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.title')"
+                        :placeholder="placeholder(slide, 'button_label', this.$tc('BlurElysiumSlides.baseForm.buttonLabelInput.placeholder') )"
+                        :helpText="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.helpText')"
+                        class="bc__my-0"
+                    />
+                {% endblock %}
+
+                <div>
+                    <!-- @TODO Placeholder for Button Appearance Setting -->
+                </div>
+
+                {% block blur_elysium_slides_input_url_overlay %}
+                    <div>
+                        <div class="bc-base__description-text bc__mb-1">
+                            {{ $tc('BlurElysiumSlides.settingsForm.urlSettings.overlay.description') }}
+                        </div>
+                        <sw-switch-field 
+                            :label="$tc('BlurElysiumSlides.settingsForm.urlSettings.overlay.inputLabel')" 
+                            v-if="slide.slideSettings"
+                            v-model="slide.slideSettings.urlOverlay"
+                            class="bc__my-0">
+                        </sw-switch-field>                
+                    </div>
+                {% endblock %}
+                
+            </sw-container>
+        {% endblock %}
+        </sw-card>
+    {% endblock %}
+</div>
