--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-media-form/blur-elysium-slides-media-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-media-form/blur-elysium-slides-media-form.twig
@@ -3,52 +3,54 @@
         :title="$tc('BlurElysiumSlides.mediaForm.cardTitle')"
         :is-loading="isLoading"
     >
-        <sw-container columns="1fr" gap="32px">
+        <sw-container columns="1fr 1fr" gap="32px">
 
             {% block blur_elysium_slides_media_form_cover_upload %}
-                    
-                <sw-upload-listener
-                    :upload-tag="coverTag"
-                    auto-upload
-                    @media-upload-finish="payload => setMedia( payload.targetId, 'slideCover' )"
-                />
-                <sw-media-upload-v2
-                    :disabled="!acl.can('blur_slides_elysium.editor')"
-                    :upload-tag="coverTag"
-                    :source="media.slideCover.data"
-                    class="blur-elysium-slides__media-upload"
-                    :allow-multi-select="false"
-                    variant="regular"
-                    :label="$tc('BlurElysiumSlides.mediaForm.uploadInput.title')"
-                    :help-text="$tc('BlurElysiumSlides.mediaForm.uploadInput.helpText')"
-                    :default-folder="entityName"
-                    @media-drop="payload => setMedia( payload.id, 'slideCover' )"
-                    @media-upload-remove-image="payload => resetMedia( 'slideCover' )"
-                    @media-upload-sidebar-open="mediaSidebar.openContent()"
-                />
+                <div>
+                    <sw-upload-listener
+                        :upload-tag="coverTag"
+                        auto-upload
+                        @media-upload-finish="payload => setMedia( payload.targetId, 'slideCover' )"
+                    />
+                    <sw-media-upload-v2
+                        :disabled="!acl.can('blur_slides_elysium.editor')"
+                        :upload-tag="coverTag"
+                        :source="media.slideCover.data"
+                        class="blur-elysium-slides__media-upload"
+                        :allow-multi-select="false"
+                        variant="regular"
+                        :label="$tc('BlurElysiumSlides.mediaForm.uploadInput.title')"
+                        :help-text="$tc('BlurElysiumSlides.mediaForm.uploadInput.helpText')"
+                        :default-folder="entityName"
+                        @media-drop="payload => setMedia( payload.id, 'slideCover' )"
+                        @media-upload-remove-image="payload => resetMedia( 'slideCover' )"
+                        @media-upload-sidebar-open="mediaSidebar.openContent()"
+                    />            
+                </div>
             {% endblock %}
 
             {% block blur_elysium_slides_media_form_cover_portrait_upload %}
-                    
-                <sw-upload-listener
-                    :upload-tag="coverPortraitTag"
-                    auto-upload
-                    @media-upload-finish="payload => setMedia( payload.targetId, 'slideCoverPortrait' )"
-                />
-                <sw-media-upload-v2
-                    :disabled="!acl.can('blur_slides_elysium.editor')"
-                    :upload-tag="coverPortraitTag"
-                    :source="media.slideCoverPortrait.data"
-                    class="blur-elysium-slides__media-upload"
-                    :allow-multi-select="false"
-                    variant="regular"
-                    :label="$tc('BlurElysiumSlides.mediaForm.coverPortrait.title')"
-                    :help-text="$tc('BlurElysiumSlides.mediaForm.coverPortrait.helpText')"
-                    :default-folder="entityName"
-                    @media-drop="payload => setMedia( payload.id, 'slideCoverPortrait' )"
-                    @media-upload-remove-image="payload => resetMedia( 'slideCoverPortrait' )"
-                    @media-upload-sidebar-open="mediaSidebar.openContent()"
-                />
+                <div>
+                    <sw-upload-listener
+                        :upload-tag="coverPortraitTag"
+                        auto-upload
+                        @media-upload-finish="payload => setMedia( payload.targetId, 'slideCoverPortrait' )"
+                    />
+                    <sw-media-upload-v2
+                        :disabled="!acl.can('blur_slides_elysium.editor')"
+                        :upload-tag="coverPortraitTag"
+                        :source="media.slideCoverPortrait.data"
+                        class="blur-elysium-slides__media-upload"
+                        :allow-multi-select="false"
+                        variant="regular"
+                        :label="$tc('BlurElysiumSlides.mediaForm.coverPortrait.title')"
+                        :help-text="$tc('BlurElysiumSlides.mediaForm.coverPortrait.helpText')"
+                        :default-folder="entityName"
+                        @media-drop="payload => setMedia( payload.id, 'slideCoverPortrait' )"
+                        @media-upload-remove-image="payload => resetMedia( 'slideCoverPortrait' )"
+                        @media-upload-sidebar-open="mediaSidebar.openContent()"
+                    />            
+                </div>
             {% endblock %}
         </sw-container>
     </sw-card>
