--- a/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
+++ b/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
@@ -100,7 +100,7 @@
                                 {% if slide.translated.button_label and slide.translated.url %}
                                     <a href="{{ slide.translated.url }}" 
                                         title="{{ slide.translated.button_label }}" 
-                                        class="{% block blur_elysium_slide_button_class %}btn btn-light cms-element-elysium-slide__cta-button fluid-text-button{% endblock %}"
+                                        class="{% block blur_elysium_slide_button_class %}btn{% if slide.slideSettings.buttonAppearance %} btn-{{slide.slideSettings.buttonAppearance}}{% endif %} cms-element-elysium-slide__cta-button fluid-text-button{% endblock %}"
                                         {% if slide.slideSettings.urlTarget == "external" %}
                                             target="_blank"
                                             rel="noopener"
