--- a/src/Resources/app/administration/src/assets/scss/global.scss
+++ b/src/Resources/app/administration/src/assets/scss/global.scss
@@ -2,10 +2,16 @@
     font-size: 14px;
 }
 .bc__mt-1 {
-    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
 }
 .bc__mb-1 {
     margin-bottom: 0.5rem;
+}
+.bc__mt-2 {
+    margin-top: 1rem;
+}
+.bc__mb-2 {
+    margin-bottom: 1rem;
 }
 .bc__my-0 {
     margin-top: 0;
@@ -13,4 +19,7 @@
 }
 .bc__my-1 {
     @extend .bc__mt-1, .bc__mb-1;
+}
+.bc__my-2 {
+    @extend .bc__mt-2, .bc__mb-2;
 }
